--- a/slr-renting/src/main/java/vista/Añadircoche.fxml
+++ b/slr-renting/src/main/java/vista/Añadircoche.fxml
@@ -4,12 +4,11 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="fondo" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="607.0" prefWidth="788.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane id="fondo" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="607.0" prefWidth="788.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controlador.AñadirCocheControlador">
    <children>
       <Line endX="170.0" endY="49.9999885559082" layoutX="-2.0" layoutY="-1.0" startX="167.79290771484375" startY="583.2070922851562" stroke="#fcdb00" />
       <Line endX="260.9000244140625" endY="51.00000762939453" layoutX="450.0" layoutY="-1.0" startX="260.9000244140625" startY="582.0" stroke="#fad900" />
@@ -20,30 +19,47 @@
       <Text fill="WHITE" layoutX="185.0" layoutY="227.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Marca" wrappingWidth="73.38397216796875" />
       <Text fill="WHITE" layoutX="185.0" layoutY="289.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Modelo" />
       <Text fill="WHITE" layoutX="185.0" layoutY="348.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Matricula" wrappingWidth="73.38397216796875" />
-      <TextField layoutX="185.0" layoutY="176.0" prefHeight="26.0" prefWidth="222.0" style="-fx-background-color: grey; -fx-border-color: fcdb00;" />
-      <TextField layoutX="185.0" layoutY="232.0" prefHeight="26.0" prefWidth="222.0" style="-fx-background-color: grey; -fx-border-color: fcdb00;" />
-      <TextField layoutX="185.0" layoutY="292.0" prefHeight="26.0" prefWidth="222.0" style="-fx-background-color: grey; -fx-border-color: fcdb00;" />
-      <TextField layoutX="185.0" layoutY="352.0" prefHeight="26.0" prefWidth="222.0" style="-fx-background-color: grey; -fx-border-color: fcdb00;" />
-      <Button layoutX="346.0" layoutY="542.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="186.0" style="-fx-border-radius: 16; -fx-background-radius: 16; -fx-background-color: fcdb00; -fx-border-color: fcdb00; -fx-text-fill: black;" text="Acceder" wrapText="true">
+      
+      <!-- TEXTFIELDS IZQUIERDA -->
+      <TextField fx:id="txtBastidor" layoutX="185.0" layoutY="176.0" prefHeight="26.0" prefWidth="222.0" style="-fx-background-color: grey; -fx-border-color: fcdb00;" />
+      <TextField fx:id="txtMarca" layoutX="185.0" layoutY="232.0" prefHeight="26.0" prefWidth="222.0" style="-fx-background-color: grey; -fx-border-color: fcdb00;" />
+      <TextField fx:id="txtModelo" layoutX="185.0" layoutY="292.0" prefHeight="26.0" prefWidth="222.0" style="-fx-background-color: grey; -fx-border-color: fcdb00;" />
+      <TextField fx:id="txtMatricula" layoutX="185.0" layoutY="352.0" prefHeight="26.0" prefWidth="222.0" style="-fx-background-color: grey; -fx-border-color: fcdb00;" />
+      <TextField fx:id="txtPrecioDiario" layoutX="182.0" layoutY="409.0" prefHeight="26.0" prefWidth="222.0" style="-fx-background-color: grey; -fx-border-color: fcdb00;" />
+      
+      <!-- BOTÓN REGISTRAR -->
+      <Button fx:id="btnRegistrar" layoutX="222.0" layoutY="541.0" mnemonicParsing="false" onAction="#registrarCoche" prefHeight="32.0" prefWidth="186.0" style="-fx-border-radius: 16; -fx-background-radius: 16; -fx-background-color: fcdb00; -fx-border-color: fcdb00; -fx-text-fill: black;" text="Registrar" wrapText="true">
          <opaqueInsets>
             <Insets />
-         </opaqueInsets></Button>
+         </opaqueInsets>
+      </Button>
+      
       <Text fill="WHITE" layoutX="185.0" layoutY="405.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Precio diario" wrappingWidth="73.38397216796875" />
-      <TextField layoutX="182.0" layoutY="409.0" prefHeight="26.0" prefWidth="222.0" style="-fx-background-color: grey; -fx-border-color: fcdb00;" />
       <Line endX="-100.5" endY="341.5" layoutX="267.0" layoutY="240.0" startX="443.4000244140625" startY="341.5" stroke="#fcdb00" />
+      
+      <!-- TEXTFIELDS DERECHA -->
       <Text fill="WHITE" layoutX="616.0" layoutY="166.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Descripcion" />
-      <TextField layoutX="472.0" layoutY="176.0" prefHeight="26.0" prefWidth="222.0" style="-fx-background-color: grey; -fx-border-color: fcdb00;" />
-      <TextField layoutX="472.0" layoutY="232.0" prefHeight="26.0" prefWidth="222.0" style="-fx-background-color: grey; -fx-border-color: fcdb00;" />
-      <TextField layoutX="472.0" layoutY="292.0" prefHeight="26.0" prefWidth="222.0" style="-fx-background-color: grey; -fx-border-color: fcdb00;" />
+      <TextField fx:id="txtDescripcion" layoutX="472.0" layoutY="176.0" prefHeight="26.0" prefWidth="222.0" style="-fx-background-color: grey; -fx-border-color: fcdb00;" />
+      <TextField fx:id="txtPlazas" layoutX="472.0" layoutY="232.0" prefHeight="26.0" prefWidth="222.0" style="-fx-background-color: grey; -fx-border-color: fcdb00;" />
+      <TextField fx:id="txtPotencia" layoutX="472.0" layoutY="292.0" prefHeight="26.0" prefWidth="222.0" style="-fx-background-color: grey; -fx-border-color: fcdb00;" />
       <Text fill="WHITE" layoutX="631.0" layoutY="227.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Plazas" />
       <Text fill="WHITE" layoutX="625.0" layoutY="281.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Potencia" />
       <Text fill="WHITE" layoutX="631.0" layoutY="348.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Motor" />
-      <TextField layoutX="472.0" layoutY="352.0" prefHeight="26.0" prefWidth="222.0" style="-fx-background-color: grey; -fx-border-color: fcdb00;" />
-      <TextField layoutX="472.0" layoutY="409.0" prefHeight="26.0" prefWidth="222.0" style="-fx-background-color: grey; -fx-border-color: fcdb00;" />
+      <TextField fx:id="txtMotor" layoutX="472.0" layoutY="352.0" prefHeight="26.0" prefWidth="222.0" style="-fx-background-color: grey; -fx-border-color: fcdb00;" />
+      <TextField fx:id="txtVelocidadMax" layoutX="472.0" layoutY="409.0" prefHeight="26.0" prefWidth="222.0" style="-fx-background-color: grey; -fx-border-color: fcdb00;" />
       <Text fill="WHITE" layoutX="631.0" layoutY="405.0" strokeType="OUTSIDE" strokeWidth="0.0" text="V Max" />
-      <Text fill="WHITE" layoutX="420.0" layoutY="478.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Imagen" />
-      <CheckBox layoutX="267.0" layoutY="100.0" mnemonicParsing="false" text="Nuevo" textFill="WHITE" />
-      <CheckBox layoutX="554.0" layoutY="100.0" mnemonicParsing="false" text="Disponible" textFill="WHITE" />
-      <ImageView fitHeight="32.0" fitWidth="265.0" layoutX="307.0" layoutY="497.0" pickOnBounds="true" preserveRatio="true" style="visibility: white; -fx-border-color: white;" />
+      
+      <!-- Agregar esto en AñadirCoche.fxml -->
+	<Text fill="WHITE" layoutX="405.0" layoutY="478.0" strokeType="OUTSIDE" strokeWidth="0.0" text="URL Imagen" />
+	<TextField fx:id="txtImagenURL" layoutX="264.0" layoutY="494.0" prefHeight="26.0" prefWidth="350.0" style="-fx-background-color: grey; -fx-border-color: fcdb00;" />
+	
+      <!-- CHECKBOXES -->
+      <CheckBox fx:id="chkNuevo" layoutX="267.0" layoutY="100.0" mnemonicParsing="false" text="Nuevo" textFill="WHITE" />
+      <CheckBox fx:id="chkDisponible" layoutX="554.0" layoutY="100.0" mnemonicParsing="false" text="Disponible" textFill="WHITE" />
+      <Button fx:id="btnRegistrar1" layoutX="469.0" layoutY="541.0" mnemonicParsing="false" onAction="#salir" prefHeight="32.0" prefWidth="186.0" style="-fx-border-radius: 16; -fx-background-radius: 16; -fx-background-color: fcdb00; -fx-border-color: fcdb00; -fx-text-fill: black;" text="Salir" wrapText="true">
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
+      </Button>
    </children>
 </AnchorPane>
