--- a/slr-renting/src/main/java/vista/Adminusuario.fxml
+++ b/slr-renting/src/main/java/vista/Adminusuario.fxml
@@ -8,16 +8,15 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="451.0" prefWidth="648.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="451.0" prefWidth="648.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controlador.AdminUsuarioControlador">
    <children>
-      <TableView layoutY="175.0" prefHeight="275.0" prefWidth="648.0" style="-fx-background-color: black; -fx-border-color: fcdb00; -fx-border-width: 6px;">
+      <TableView fx:id="tblUsuarios" layoutY="175.0" prefHeight="275.0" prefWidth="648.0" style="-fx-background-color: black; -fx-border-color: fcdb00; -fx-border-width: 6px;">
         <columns>
-          <TableColumn prefWidth="58.4000244140625" text="ID" />
-          <TableColumn prefWidth="120.0" text="Nombre" />
-            <TableColumn prefWidth="146.39996337890625" text="Teléfono" />
-            <TableColumn prefWidth="181.60001220703123" text="Correo" />
-            <TableColumn prefWidth="132.79998779296875" text="NIF/NIE" />
+          <TableColumn fx:id="clmID" prefWidth="58.4000244140625" text="ID" />
+          <TableColumn fx:id="clmNombre" prefWidth="120.0" text="Nombre" />
+            <TableColumn fx:id="clmTlf" prefWidth="146.39996337890625" text="Teléfono" />
+            <TableColumn fx:id="clmCorreo" prefWidth="181.60001220703123" text="Correo" />
+            <TableColumn fx:id="clmNif" prefWidth="132.79998779296875" text="NIF/NIE" />
         </columns>
       </TableView>
       <Text fill="WHITE" layoutX="7.0" layoutY="94.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Panel administracion de usuarios " wrappingWidth="634.6878051757812">
@@ -25,12 +24,12 @@
             <Font size="43.0" />
          </font>
       </Text>
-      <Button layoutX="573.0" layoutY="22.0" mnemonicParsing="false" text="Volver" />
+      <Button fx:id="btnVolver" layoutX="573.0" layoutY="22.0" mnemonicParsing="false" text="Volver" />
       <ButtonBar layoutX="377.0" layoutY="141.0" prefHeight="34.0" prefWidth="261.0">
         <buttons>
-          <Button minWidth="56.0" mnemonicParsing="false" prefHeight="14.0" text="Añadir" />
-            <Button mnemonicParsing="false" text="Borrar" />
-            <Button mnemonicParsing="false" text="Editar" />
+          <Button fx:id="btnAñadir" minWidth="56.0" mnemonicParsing="false" prefHeight="14.0" text="Añadir" />
+            <Button fx:id="btnBorrar" mnemonicParsing="false" text="Borrar" />
+            <Button fx:id="btnEditar" mnemonicParsing="false" text="Editar" />
         </buttons>
       </ButtonBar>
    </children>
