--- a/slr-renting/src/main/java/vista/Loginusuarioregistrado.fxml
+++ b/slr-renting/src/main/java/vista/Loginusuarioregistrado.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -8,11 +9,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:controller="controlador.LoginUsuarioRegistradoControlador"
-    xmlns="http://javafx.com/javafx/24.0.1"
-    xmlns:fx="http://javafx.com/fxml/1"
-    prefHeight="607.0" prefWidth="620.0"
-    style="-fx-background-color: black;">
+<AnchorPane prefHeight="607.0" prefWidth="620.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controlador.LoginUsuarioRegistradoControlador">
 
     <children>
         <Line endX="170.0" endY="49.9999885559082" layoutX="-7.0" layoutY="1.0" startX="168.79287719726562" startY="421.8070983886719" stroke="#fcdb00" />
@@ -24,34 +21,22 @@
         <Text fill="WHITE" layoutX="185.0" layoutY="179.0" text="Email" />
         <Text fill="WHITE" layoutX="185.0" layoutY="233.0" text="Contraseña" />
 
-        <TextField layoutX="185.0" layoutY="183.0" prefHeight="26.0" prefWidth="222.0" 
-                   style="-fx-background-color: grey; -fx-border-color: fcdb00;" />
-        <TextField layoutX="186.0" layoutY="243.0" prefHeight="26.0" prefWidth="222.0" 
-                   style="-fx-background-color: grey; -fx-border-color: fcdb00;" />
+        <TextField fx:id="txtEmail" layoutX="185.0" layoutY="183.0" prefHeight="26.0" prefWidth="222.0" style="-fx-background-color: grey; -fx-border-color: #fcdb00;" />
 
         <!-- BOTÓN ACCEDER -->
-        <Button layoutX="203.0" layoutY="304.0"
-                mnemonicParsing="false" prefHeight="32.0" prefWidth="186.0"
-                style="-fx-background-color: grey; -fx-border-color: fcdb00; -fx-text-fill: black;" 
-                text="Acceder" wrapText="true"
-                onAction="#onAcceder" />
+        <Button layoutX="203.0" layoutY="304.0" mnemonicParsing="false" onAction="#onAcceder" prefHeight="32.0" prefWidth="186.0" style="-fx-background-color: grey; -fx-border-color: #fcdb00; -fx-text-fill: black;" text="Acceder" wrapText="true" />
 
         <Line endX="-104.91421508789062" endY="341.5141906738281" layoutX="266.0" layoutY="82.0" startX="161.5" startY="342.10003662109375" stroke="#fcdb00" />
 
         <!-- BOTÓN DE REGISTRO -->
-        <Button fx:id="btnRegistro"
-                layoutX="206.0" layoutY="360.0"
-                mnemonicParsing="false" prefHeight="51.0" prefWidth="186.0"
-                style="-fx-text-fill: white; -fx-background-color: black;"
-                text="Si es su primera vez registrese aquí."
-                textAlignment="CENTER"
-                wrapText="true"
-                onAction="#irARegistro" />
+        <Button fx:id="btnRegistro" layoutX="206.0" layoutY="360.0" mnemonicParsing="false" onAction="#irARegistro" prefHeight="51.0" prefWidth="186.0" style="-fx-text-fill: white; -fx-background-color: black;" text="Si es su primera vez registrese aquí." textAlignment="CENTER" wrapText="true" />
 
         <ImageView fitHeight="78.0" fitWidth="73.0" layoutX="170.0" layoutY="51.0" preserveRatio="true">
             <image>
                 <Image url="@logo.jpg" />
             </image>
         </ImageView>
+
+        <PasswordField fx:id="txtPassword" layoutX="185.0" layoutY="237.0" prefHeight="26.0" prefWidth="222.0" style="-fx-background-color: grey; -fx-border-color: #fcdb00;" />
     </children>
 </AnchorPane>
