--- a/slr-renting/src/main/java/vista/PanelReservaUser.fxml
+++ b/slr-renting/src/main/java/vista/PanelReservaUser.fxml
@@ -1,40 +1,93 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="451.0" prefWidth="648.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controlador.AdminChoferControlador">
-   <children>
-      <TableView fx:id="tblChofer" layoutY="175.0" prefHeight="275.0" prefWidth="648.0" style="-fx-background-color: black; -fx-border-color: fcdb00; -fx-border-width: 6px;">
-        <columns>
-          <TableColumn fx:id="clmID" prefWidth="58.4000244140625" text="ID" />
-          <TableColumn fx:id="clmNombre" prefWidth="200.80001831054688" text="Nombre" />
-            <TableColumn fx:id="clmTlf" prefWidth="140.79998779296875" text="Teléfono" />
-            <TableColumn fx:id="clmDni" prefWidth="135.20001220703125" text="DNI" />
-            <TableColumn fx:id="clmDisp" prefWidth="104.800048828125" text="Disposicion" />
-        </columns>
-      </TableView>
+<BorderPane fx:id="root" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controlador.PanelReservaUserControlador">
 
-      <Text fill="WHITE" layoutX="7.0" layoutY="94.0"
-            strokeType="OUTSIDE" strokeWidth="0.0"
-            text="Panel administracion de Chofers"
-            wrappingWidth="634.6878051757812">
-         <font>
-            <Font size="43.0" />
-         </font>
-      </Text>
-      <Button fx:id="btnVolver" layoutX="573.0" layoutY="22.0" mnemonicParsing="false" text="Volver" />
-      <ButtonBar layoutX="377.0" layoutY="141.0" prefHeight="34.0" prefWidth="261.0">
-        <buttons>
-          <Button fx:id="btnAñadir" minWidth="56.0" mnemonicParsing="false" prefHeight="14.0" text="Añadir" />
-            <Button fx:id="btnBorrar" mnemonicParsing="false" text="Borrar" />
-            <Button fx:id="btnEditar" mnemonicParsing="false" text="Editar" />
-        </buttons>
-      </ButtonBar>
-   </children>
-</AnchorPane>
+ 
+    <top>
+        <HBox alignment="CENTER_LEFT" spacing="16" style="-fx-background-color: black;">
+            <padding>
+                <Insets bottom="12" left="20" right="20" top="12" />
+            </padding>
+
+            <ImageView fitHeight="36" fitWidth="36" preserveRatio="true">
+                <image>
+                    <Image url="@logo.jpg" />
+                </image>
+            </ImageView>
+
+            <Label style="-fx-text-fill: #ffd666; -fx-font-size: 18px; -fx-font-weight: bold;" text="Selecciona tus fechas" />
+
+            <StackPane HBox.hgrow="ALWAYS" />
+
+            <MenuButton style="-fx-background-radius: 20; -fx-background-color: transparent; -fx-border-radius: 20; -fx-border-color: #ffd666; -fx-border-width: 1.2; -fx-text-fill: #ffd666; -fx-font-size: 12px; -fx-padding: 6 14 6 14;" text="Usuario">
+                <items>
+                    <MenuItem text="Config" />
+                    <MenuItem text="Mis Reservas" />
+                    <MenuItem text="Logout" />
+                </items>
+            </MenuButton>
+        </HBox>
+    </top>
+
+
+    <center>
+        <VBox alignment="TOP_CENTER" spacing="18" style="-fx-background-color: black;">
+            <padding>
+                <Insets bottom="20" left="24" right="24" top="20" />
+            </padding>
+
+            <Label style="-fx-text-fill: #ffd666; -fx-font-size: 12px; -fx-font-weight: bold;" text="Precio rebajado a partir de 7 y 30 días de alquiler" />
+
+            <GridPane hgap="24" vgap="18">
+                
+
+                <DatePicker fx:id="desdePicker" promptText="Fecha de inicio" style="-fx-background-radius: 12; -fx-font-size: 13px; -fx-padding: 8 12 8 12;" GridPane.columnIndex="0" />
+
+                <DatePicker fx:id="hastaPicker" promptText="Fecha de fin" style="-fx-background-radius: 12; -fx-font-size: 13px; -fx-padding: 8 12 8 12;" GridPane.columnIndex="1" />
+            <columnConstraints>
+               <ColumnConstraints />
+               <ColumnConstraints />
+            </columnConstraints>
+            <rowConstraints>
+               <RowConstraints />
+            </rowConstraints>
+            </GridPane>
+
+        
+            <HBox alignment="CENTER_LEFT" spacing="18">
+                <Label style="-fx-text-fill: #b5b5b5; -fx-font-size: 13px;" text="Días seleccionados: " />
+                <Label fx:id="lblDiasSeleccionados" style="-fx-text-fill: #f5f5f5; -fx-font-size: 13px; -fx-font-weight: bold;" text="0" />
+
+                <StackPane HBox.hgrow="ALWAYS" />
+
+                <Label style="-fx-text-fill: #b5b5b5; -fx-font-size: 13px;" text="Precio estimado: " />
+                <Label fx:id="lblPrecioEstimado" style="-fx-text-fill: #ffd666; -fx-font-size: 13px; -fx-font-weight: bold;" text="0€" />
+            </HBox>
+
+            <!-- BOTONES -->
+            <HBox alignment="CENTER" spacing="12">
+                <Button fx:id="btnConfirmar" style="-fx-background-radius: 20; -fx-background-color: #ffd666; -fx-text-fill: #111111; -fx-font-size: 14px; -fx-font-weight: bold; -fx-padding: 8 20 8 20;" text="Confirmar fechas" />
+
+                <Button fx:id="btnCancelar" style="-fx-background-radius: 20; -fx-background-color: transparent; -fx-border-color: #3b3320; -fx-border-width: 1.2; -fx-text-fill: #f5f5f5; -fx-font-size: 14px; -fx-padding: 8 20 8 20;" text="Cancelar" />
+            </HBox>
+
+        </VBox>
+    </center>
+
+</BorderPane>
