--- a/slr-renting/src/main/java/vista/PanelMainUser.fxml
+++ b/slr-renting/src/main/java/vista/PanelMainUser.fxml
@@ -115,7 +115,7 @@
                                         <Insets top="12" bottom="12" left="16" right="16"/>
                                     </padding>
                                     <VBox spacing="6">
-                                        <Label text="0-100 km/h"
+                                        <Label text="Nº plazas "
                                                style="-fx-text-fill: #b5b5b5; -fx-font-size: 11px;"/>
                                         <Label fx:id="lblAceleracionDestacado"
                                                text="0.0 s"
